Adapting to 1.21
need registry stuffs